@@ -1,5 +1,9 @@
 2014-01-27  Jason Merrill  <jason@redhat.com>
 
+	PR c++/58837
+	* typeck.c (cp_truthvalue_conversion): Use explicit comparison for
+	FUNCTION_DECL.
+
 	PR c++/59097
 	* decl.c (compute_array_index_type): Don't call
 	maybe_constant_value for a non-integral expression.
